--- a/src/main/resources/templates/editProfile.html
+++ b/src/main/resources/templates/editProfile.html
@@ -112,6 +112,8 @@
     }
 
 </style>
+
+
 <body>
 <!--사이드바-->
 <div class="d-flex flex-nowrap">
@@ -186,26 +188,32 @@
                             </div>
                         </div>
 
-
-<!--                        <div class="btn-editProfile">-->
-<!--                            <button class="text-center btn btn-primary2" id="saveCancel"  onclick="location.href='/mypage.html';">취소</button>-->
-
                     </div>
-                    <div class="btn_align">
 
-                        <button class="col text-center btn btn-primary2" id="saveCancel" onclick="cancel()">취소
-                        </button>
-
-                        <button class="text-center btn btn-primary btn-md" id="saveProfileBtn" type="button"
-                                onclick="saveProfile()">저장
-                        </button>
-                    </div>
                 </form>
+                <div class="btn_align">
+
+                    <button class="col text-center btn btn-primary2" id="saveCancel">취소
+                    </button>
+
+                    <button class="text-center btn btn-primary btn-md" id="saveProfileBtn" type="button"
+                            onclick="saveProfile()">저장
+                    </button>
+                </div>
             </div>
 
         </div>
     </div>
 </div>
+<script>
+    $(document).ready(function() {
+        $('#saveCancel').click(function() {
+            console.log("클릭했다.");
+            history.back();
+        });
+    });
+</script>
+
 
 <script th:inline="javascript">
 
@@ -254,9 +262,7 @@
         })
     }
 
-    function cancel() {
-        window.location.href = '/review';
-    }
+
 </script>
 </body>
 </html>
