리뷰북 - 수정, 삭제 구현 / 좋아요 테이블 생성, 엔티티 작성 중

--- a/src/main/resources/templates/mypage/mypage.html
+++ b/src/main/resources/templates/mypage/mypage.html
@@ -607,7 +607,8 @@
             </div>
         </div>
     </div>
-    <!--  리뷰북 작성  -->
+
+    <!--  리뷰북 작성 폼 -->
     <div id="book-editor" class="modal fade" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="bookEditorLabel" aria-hidden="true">
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         <div class="modal-dialog modal-dialog-centered">
